<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_go_to_artist"
        android:title="@string/go_to_artist" />
    <item
        android:id="@+id/popup_song_addto_queue"
        android:title="@string/add_to_queue" />
    <item
        android:id="@+id/popup_song_addto_playlist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/menu_sort_by"
        android:showAsAction="never"
        android:orderInCategory="50"
        android:title="@string/menu_sort_by">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_year"
                android:title="@string/sort_order_entry_year"/>
            <item
                android:id="@+id/menu_sort_by_track_number"
                android:title="@string/sort_order_entry_track_number"/>
            <item
                android:id="@+id/menu_sort_by_duration"
                android:title="@string/sort_order_entry_duration"/>
        </menu>
    </item>

</menu>