<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_sort_by"
        android:showAsAction="never"
        android:orderInCategory="50"
        android:title="@string/menu_sort_by">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_number_of_songs"
                android:title="@string/sort_order_entry_number_of_songs"/>
            <item
                android:id="@+id/menu_sort_by_number_of_albums"
                android:title="@string/sort_order_entry_number_of_albums"/>
        </menu>
    </item>

</menu>