<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="15dp"
    android:layout_margin="15dp">


    <TextView
        android:id="@+id/app_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timber_about_opensource"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/googleplus"
        android:text="Google+"
        android:textSize="17sp"
        android:clickable="true"
        style="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="8dp"
        android:paddingLeft="10dp"
        android:text="Twitter"
        android:textSize="17sp"
        style="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="Github"
        android:textSize="17sp"
        style="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/timber_source"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:id="@+id/feature_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/timber_feature_request"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/dismiss_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:layout_gravity="right"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="?selectableItemBackgroundBorderless"/>

</LinearLayout>